xee-xpath/tests/snapshots/arithmetic__add_int_to_decimal.snap
---
source: xee-xpath/tests/arithmetic.rs
expression: "run_without_context(\"12 + 15.4\")"
---
Ok(
    Atomic(
        Decimal(
            27.4,
        ),
    ),
)
