xee-xpath/tests/snapshots/arithmetic__add_int_to_double.snap
---
source: xee-xpath/tests/arithmetic.rs
expression: "evaluate_without_focus(\"12 + 15.4e0\")"
---
Ok(
    Sequence {
        stack_value: Atomic(
            Double(
                OrderedFloat(
                    27.4,
                ),
            ),
        ),
    },
)
