xee-xpath/tests/snapshots/arithmetic__div_both_integers.snap
---
source: xee-xpath/tests/arithmetic.rs
expression: "evaluate_without_focus(\"12 div 3\")"
---
Ok(
    Sequence {
        stack_value: Item(
            Atomic(
                Decimal(
                    4,
                ),
            ),
        ),
    },
)
