xee-xpath/tests/snapshots/arithmetic__div_decimal.snap
---
source: xee-xpath/tests/arithmetic.rs
expression: "evaluate_without_focus(\"12 div 3.0\")"
---
Ok(
    Sequence {
        stack_value: Atomic(
            Decimal(
                4.0,
            ),
        ),
    },
)
