xee-xpath/tests/snapshots/arithmetic__div_double.snap
---
source: xee-xpath/tests/arithmetic.rs
expression: "evaluate_without_focus(\"12 div 3.0e0\")"
---
Ok(
    Sequence {
        items: [
            Atomic(
                Double(
                    4.0,
                ),
            ),
        ],
    },
)
