xee-xpath/tests/snapshots/arithmetic__integer_div.snap
---
source: xee-xpath/tests/arithmetic.rs
expression: "evaluate_without_focus(\"12 idiv 5\")"
---
Ok(
    OutputSequence {
        items: [
            Atomic(
                Integer(
                    2,
                ),
            ),
        ],
    },
)
