xee-xpath/tests/snapshots/arithmetic__mod.snap
---
source: xee-xpath/tests/arithmetic.rs
expression: "evaluate_without_focus(\"12 mod 5\")"
---
Ok(
    OutputSequence {
        items: [
            Atomic(
                Integer(
                    2,
                ),
            ),
        ],
    },
)
