xee-xpath/tests/snapshots/arithmetic__mul_int.snap
---
source: xee-xpath/tests/arithmetic.rs
expression: "evaluate_without_focus(\"12 * 15\")"
---
Ok(
    Sequence {
        stack_value: Item(
            Atomic(
                Integer(
                    180,
                ),
            ),
        ),
    },
)
